# Cookiecake

./: .pre-commit-config.yaml  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
{{cookiecutter.project_name}}/code/exe/: CMakeLists.txt  Dependencies.cmake
{{cookiecutter.project_name}}/code/exe/src/: main.cpp
{{cookiecutter.project_name}}/code/lib/: CMakeLists.txt  Dependencies.cmake
{{cookiecutter.project_name}}/code/lib/src/: lib.cpp
{{cookiecutter.project_name}}/code/lib/test/: CMakeLists.txt
{{cookiecutter.project_name}}/code/lib/test/src/: foo_test.cpp
{{cookiecutter.project_name}}/infra/: .gitignore
{{cookiecutter.project_name}}/infra/cmake/: BuildTelemetryConfig.cmake  Cake.cmake  CompilerWarnings.cmake  Config.cmake.in  appleclang-toolchain.cmake  cake-install-library.cmake  gnu-toolchain.cmake  llvm-libc++-toolchain.cmake  llvm-toolchain.cmake  msvc-toolchain.cmake
{{cookiecutter.project_name}}/infra/vcpkg/: VcpkgBootstrap.cmake  vcpkg_bootstrap_toolchain.cmake
{{cookiecutter.project_name}}/triplets/: x64-{{cookiecutter.project_name.replace('_', '-')}}.cmake
